# CPD

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  assert.h  assignment.c  assignment.h  bitfield.c  bitfield.h  clauses.c  clauses.h  clauses_repr.c  clauses_repr.h  crepr.c  crepr.h  debug.c  debug.h  main.c  maxsat-omp.c  maxsat-serial.c  mpi_datatypes.c  mpi_datatypes.h  mpi_utils.c  mpi_utils.h  parse_long.c  parse_long.h  project_specific.h  result.c  result.h  test_assignment.c  test_bitfield.c  test_clauses.c  test_clauses_repr.c  test_crepr.c  test_result.c  unit_test.h  useful_commands
OpenSuse/: Dockerfile  make_script
delivery/: Makefile  maxsat-mpi-omp.c  maxsat-mpi.c  maxsat-omp.c  maxsat-serial.c  readme.txt
first_delivery/: maxsat-omp.c  maxsat-serial.c
scripts/: gen_ex_single_var.py  gen_ex_two_vars.py  gen_random_big_parse_tests.py  gen_test_clauses_repr.py  get_times.sh  merge_header_files.py  run_all.py
test/: ex1.out  ex2.out  ex3.out  ex4.out  ex5.out  random1.in  random2.in  random3.in  random4.in  random5.in  random7.in
test/parse/: parse_0_vars.in  parse_127_vars.in  parse_128_vars.in  parse_20_vars_clause.in  parse_21_vars_clause.in  parse_65535_clauses.in  parse_65536_clauses.in  parse_65537_clauses.in  parse_var_too_big_clause.in
